d1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        # image: nginx:1.25.3
        image: busybox:latest
        command: 
          - "/bin/bash"
        args:
          - "-c"
          - "sleep 180"
        ports:
        - containerPort: 80
