eureka-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: eureka
  name: eureka-deployment-1
  labels:
    app: eureka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-1
  template:
    metadata:
      labels:
        app: eureka-1
    spec:
      containers:
      - name: eureka
        image: hammer2j2/eureka:v0.0.4
        ports:
        - containerPort: 8080
