eureka-service-2.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: eureka
  name: eureka-svc-2
spec:
  selector:
    app: eureka-2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
