s2.yaml
kind: Service
apiVersion: v1
metadata:
  name: eureka-svc
spec:
  selector:
    app: eureka
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
